# stereo-vo

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
calibration/: distortion_left.pkl  distortion_right.pkl  intrinsic_left.pkl  intrinsic_right.pkl
src/vo/: calibration_loader.py  feature_detector.py  feature_matcher.py  image_loader.py  stereo_matcher.py  stereo_visual_odometry.py  utils.py  video_capture_threaded.py
